Search map integirtion using google api key

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEZGp3AaT33Tt3kuiUGT2yIYILBe70Db4&libraries=places"  async
+  defer></script>
+
 </body>
 </html>
